[gd_scene load_steps=6 format=3 uid="uid://c1njw07qnv2ul"]

[ext_resource type="PackedScene" uid="uid://hmxe78pntojx" path="res://scenes/gui/main_menu.tscn" id="1_5cwwt"]
[ext_resource type="Script" path="res://scenes/gui/pre_game_menu.gd" id="1_aexx0"]
[ext_resource type="PackedScene" uid="uid://c4q7skpmltk8l" path="res://scenes/gui/local_menu/local_menu.tscn" id="2_k02fe"]
[ext_resource type="Texture2D" uid="uid://c7wses8t0sikm" path="res://assets/images/gui/main_menu/screentone-g-5.0ppi.png" id="2_mflis"]
[ext_resource type="PackedScene" uid="uid://g0un4ork14i8" path="res://scenes/gui/lobby_menu/lobby_menu.tscn" id="3_co3tb"]

[node name="PreGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aexx0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.204944, 0.256014, 0.374552, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.276034, 0.344814, 0.451007, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mflis")
expand_mode = 1

[node name="MainMenu" parent="." instance=ExtResource("1_5cwwt")]
layout_mode = 1

[node name="LocalMenu" parent="." instance=ExtResource("2_k02fe")]
visible = false
layout_mode = 1

[node name="LobbyMenu" parent="." instance=ExtResource("3_co3tb")]
visible = false
layout_mode = 1

[connection signal="back_button_pressed" from="MainMenu" to="." method="_on_main_menu_back_button_pressed"]
[connection signal="local_game_button_pressed" from="MainMenu" to="." method="_on_main_menu_local_game_button_pressed"]
[connection signal="back_button_pressed" from="LocalMenu" to="." method="_on_local_menu_back_button_pressed"]
[connection signal="host_button_pressed" from="LocalMenu" to="." method="_on_local_menu_host_button_pressed"]
[connection signal="join_button_pressed" from="LocalMenu" to="." method="_on_local_menu_join_button_pressed"]
[connection signal="back_button_pressed" from="LobbyMenu" to="." method="_on_lobby_menu_back_button_pressed"]
[connection signal="ready_button_pressed" from="LobbyMenu" to="." method="_on_lobby_menu_ready_button_pressed"]
[connection signal="start_button_pressed" from="LobbyMenu" to="." method="_on_lobby_menu_start_button_pressed"]
